# Advanced-GPU-Programming

./: README.md
01-MPI/01-GPU_affinity/exercises/: Instructions.md
01-MPI/01-GPU_affinity/exercises/solution/: Makefile
01-MPI/01-GPU_affinity/exercises/task/: jacobi.cpp
01-MPI/02-GPUDirect/: Instructions.md
01-MPI/02-GPUDirect/code/: jacobi.cpp
01-MPI/03-Collectives/: Instructions.md
01-MPI/04-Communication_Computation_Overlap/: Instructions.md
02-NCCL_NVSHMEM/01-NCCL/solutions/: Instructions.md  jacobi.cpp
02-NCCL_NVSHMEM/01-NCCL/tasks/: Instructions.ipynb  jacobi.cpp
02-NCCL_NVSHMEM/02-NVSHMEM_Host/solutions/: Instructions.ipynb  jacobi.cu
02-NCCL_NVSHMEM/02-NVSHMEM_Host/tasks/: Instructions.md  jacobi.cu
02-NCCL_NVSHMEM/03-NVSHMEM_Device/solutions/: Instructions.ipynb  jacobi.cu
02-NCCL_NVSHMEM/03-NVSHMEM_Device/tasks/: Instructions.md  jacobi.cu
03-Cooperative_Groups/exercises/solutions/task1/: Instructions.ipynb  (+1 more)
05-Modern_C++/: CUDA-C++.odp  Instructions.md
06-CUB/exercises/solutions/: Makefile
06-CUB/exercises/tasks/: Makefile
06-CUB/slides/: CUB_intro.odp
08-OpenACC/exercises/: Instructions.ipynb  Instructions.md  setup.sh
09-pSTL/: Instructions.ipynb  Instructions.md
09-pSTL/slides/: pSTL.odp
10-Kokkos/setup/: install.kokkos
10-Kokkos/solution/: h02.cpp  makefile  readme.md  t00.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp  t06.cpp  t07.cpp  t08.cpp
10-Kokkos/solutions/: CMakePresets.json  h01.cpp  makefile  t01.cpp  t03.cpp  t04.cpp  t05.cpp
10-Kokkos/tasks/: CMakeLists.txt  h02.cpp  setup.sh  t02.cpp  t06.cpp  t08.cpp
(+88 files in other folders)
